Update legacy reference to laminas

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     }
   },
   "extra": {
-    "zf" : {
+    "laminas" : {
       "config-provider": "Tigerman55\\AuthenticationDoctrineUserRepository\\ConfigProvider"
     }
   },
